# DataLandscape

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  project_structure.md  pyproject.toml  requirements-dev.txt  requirements.txt
.astro/: config.yaml
.cursor/rules/: airflow-dag-writing-guidelines.mdc  airflow-include-guidelines.mdc  airflow-test-task-guidelines.mdc  python-rules.mdc
.github/workflows/: astro_deploy.yaml  deploy_lambda.yml  lambda_cd.yml  lambda_ci.yml  lambdas_cd.yml  lambdas_ci.yml
dags/: build_dim_tables_dag.py  fetch_reddit_dag.py  ingest_reddit_dag.py  ingest_reddit_to_s3_dag.py  load_motherduck_dw.py  load_reddit_to_raw_dag.py  wap_reddit.py
dags/aggregates/: aggregate_pypi_dag.py  aggregate_reddit_dag.py
dags/evidence/: deploy_evidence_dashboard_dag.py
dags/motherduck/: load_motherduck_dw.py
dags/spark/: backfill_pypi_dag.py  backfill_pypi_file_downloads_dag.py  load_pypi_dag.py  load_reddit_dag.py  process_reddit_dag.py  pypi_file_downloads_dag.py  reddit_transform_dag.py  wap_pypi_file_downloads_dag.py
include/: reference.py
include/schemas/: dim_tables.py  pypi.py  reddit.py
include/scraping/: pypi.py  reddit.py  reddit_archive.py
include/scripts/: scraping_job_reddit.py  scraping_job_reddit_archive.py
include/spark/: spark_job_audit_reddit_threads.py  spark_job_load_reddit_from_s3.py  spark_job_process_reddit_threads.py
include/utils/: aws_athena.py  aws_glue.py  aws_s3.py  duck.py  (+3 more)
lambdas/: event.example.json  event.json  event_multi.json  lambdas.json  requirements-dev.txt  template.yaml
(+23 files in other folders)
