[project]
name = "datalandscape"
version = "0.1.0"
description = "DataLandscape.org Lakehouse Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow-providers-amazon>=9.8.0",
    "apache-airflow-providers-trino>=6.2.0",
    "pendulum>=3.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
]
